image stretch class conflict in shopify fix

--- a/src/css/ChoiceCard.css
+++ b/src/css/ChoiceCard.css
@@ -34,7 +34,7 @@
 
 .two .image-section {
     height: 50px;
-    width: 50px;
+    max-width: 50px;
     margin-top: 5px;
 }
 
